# rust-template

./: Cargo.toml  Dockerfile  cargo-generate.toml
.github/workflows/: ci.yaml  generate-ci.yaml
src/: error.rs  lib.rs  main.rs
